<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tip_10">10%</string>
    <string name="tip_15">15%</string>
    <string name="tip_20">20%</string>
    <string name="tip_result">Tip is:   </string>
    <string name="input_bill">Input your bill here : )</string>
    
</resources>
