<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_tip10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_bill"
        android:layout_below="@+id/text_bill"
        android:layout_marginTop="86dp"
        android:gravity="left"
        android:text="@string/tip_10" />

    <Button
        android:id="@+id/button_tip15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_tip10"
        android:layout_alignBottom="@+id/button_tip10"
        android:layout_toRightOf="@+id/button_tip10"
        android:gravity="left"
        android:text="@string/tip_15" />

    <Button
        android:id="@+id/button_tip20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_tip15"
        android:layout_alignBottom="@+id/button_tip15"
        android:layout_toRightOf="@+id/button_tip15"
        android:gravity="left"
        android:text="@string/tip_20" />

    <TextView
        android:id="@+id/text_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_tip10"
        android:layout_marginTop="87dp"
        android:layout_toRightOf="@+id/button_tip10"
        android:text="@string/tip_result" 
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/text_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="@string/input_bill" >

        <requestFocus />
    </EditText>

</RelativeLayout>